Actualzacion telefono, correo, login

--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
 					<div class="menu-top container">
 						<div class="d-flex justify-content-between align-items-center">
 							<ul class="list">
-								<li><a href="tel:+12312-3-1209">+12312-3-1209</a></li>
-								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>								
-							</ul>
-							<ul class="list">
-								<li><a href="#">login</a></li>
+								<li><a href="tel:6641239876">664-123-9876</a></li>
+								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>								
 							</ul>
 						</div>
 					</div>					
