--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
 					<div class="menu-top container">
 						<div class="d-flex justify-content-between align-items-center">
 							<ul class="list">
-<<<<<<< HEAD
 								<li><a href="tel:+12312-3-1209">+12312-3-1209</a></li>
 								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>								
 							</ul>
 							<ul class="list">
-								<li><a href="#">Probando git (Login)</a></li>
-=======
+								<li><a href="#">Login</a></li>
 								<li><a href="tel:6641239876">664-123-9876</a></li>
 								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>								
->>>>>>> aaa5d796ffd11b785aa5c2896ec74d2e3c990ca6
 							</ul>
 						</div>
 					</div>					
@@ -554,7 +551,7 @@
 					<div class="row">
 						<div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>About Us</h6>
+								<h6>Acerca de nosotros</h6>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
 								</p>
@@ -562,15 +559,15 @@
 						</div>
 						<div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Newsletter</h6>
-								<p>Stay update with our latest</p>
+								<h6>Boletín</h6>
+								<p>Manténgase actualizada con nuestras últimas ofertas</p>
 								<div class="" id="mc_embed_signup">
 
 										<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
 
 										<div class="d-flex flex-row">
 
-											<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+											<input class="form-control" name="EMAIL" placeholder="Ingresar correo electrónico" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
 
 
 				                            	<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
@@ -589,7 +586,7 @@
 						</div>						
 						<div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">Instragram Feed</h6>
+								<h6 class="mb-20">Instagram</h6>
 								<ul class="instafeed d-flex flex-wrap">
 									<li><img src="img/i1.jpg" alt=""></li>
 									<li><img src="img/i2.jpg" alt=""></li>
@@ -604,8 +601,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Follow Us</h6>
-								<p>Let us be social</p>
+								<h6>Siguenos</h6>								
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
