--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Site Title -->
 		<title>Shop</title>
 
-		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
 			CSS
 			============================================= -->
@@ -36,15 +36,15 @@
 						<div class="d-flex justify-content-between align-items-center">
 							<ul class="list">
 								<li><a href="tel:+12312-3-1209">+12312-3-1209</a></li>
-								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>								
+								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>
 							</ul>
 							<ul class="list">
 								<li><a href="#">Login</a></li>
 								<li><a href="tel:6641239876">664-123-9876</a></li>
-								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>								
+								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>
 							</ul>
 						</div>
-					</div>					
+					</div>
 				</div>
 				<nav class="navbar navbar-expand-lg  navbar-light">
 					<div class="container">
@@ -56,7 +56,7 @@
 						  </button>
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
-								<li><a href="#home">Ropa</a></li>
+								<li><a href="#home">ROPA DE VIEJAS</a></li>
 								<li><a href="#catagory">Accesorios</a></li>
 								<li><a href="#men">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
@@ -76,9 +76,9 @@
 								        <a class="dropdown-item" href="generic.html">Generic</a>
 								        <a class="dropdown-item" href="elements.html">Elements</a>
 								      </div>
-								    </li>									
+								    </li>
 						    </ul>
-						  </div>						
+						  </div>
 					</div>
 				</nav>
 			</header>
@@ -98,11 +98,11 @@
 								this Season!
 							</h1>
 							<button class="primary-btn text-uppercase"><a href="#">Purchase Now</a></button>
-						</div>							
+						</div>
 					</div>
 				</div>
 			</section>
-			<!-- End banner Area -->	
+			<!-- End banner Area -->
 
 			<!-- Start category Area -->
 			<section class="category-area section-gap section-gap" id="catagory">
@@ -114,7 +114,7 @@
 								<p>Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
-					</div>					
+					</div>
 					<div class="row">
 						<div class="col-lg-8 col-md-8 mb-10">
 							<div class="row category-bottom">
@@ -150,8 +150,8 @@
 									      </div>
 									    </a>
 									</div>
-							  	</div>																
-							</div>							
+							  	</div>
+							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 mb-10">
 						  <div class="content">
@@ -163,12 +163,12 @@
 						      </div>
 						    </a>
 						  </div>
-						</div>						
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End category Area -->
-			
+
 			<!-- Start men-product Area -->
 			<section class="men-product-area section-gap relative" id="men">
 				<div class="overlay overlay-bg"></div>
@@ -199,7 +199,7 @@
 						  		<h5 class="text-white">Long Sleeve shirt</h5>
 						  		<h3 class="text-white">$150.00</h3>
 						   </div>
-						</div>	
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 						      <div class="content-overlay"></div>
@@ -211,13 +211,13 @@
 										<a href="#"><span class="lnr lnr-cart"></span></a>
 										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
 									</div>
-						      </div>					      
+						      </div>
 						  </div>
 						  <div class="price">
 						  		<h5 class="text-white">Long Sleeve shirt</h5>
 						  		<h3 class="text-white">$150.00</h3>
-						   </div>							  
-						</div>	
+						   </div>
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 						      <div class="content-overlay"></div>
@@ -229,13 +229,13 @@
 										<a href="#"><span class="lnr lnr-cart"></span></a>
 										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
 									</div>
-						      </div>					      
+						      </div>
 						  </div>
 						  <div class="price">
 						  		<h5 class="text-white">Long Sleeve shirt</h5>
 						  		<h3 class="text-white">$150.00</h3>
-						   </div>							  
-						</div>	
+						   </div>
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 					      	<div class="content-overlay"></div>
@@ -252,10 +252,10 @@
 						    <div class="price">
 						  		<h5 class="text-white">Long Sleeve shirt</h5>
 						  		<h3 class="text-white">$150.00</h3>
-						    </div>							  					  
-						</div>																		
+						    </div>
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End men-product Area -->
 
@@ -285,8 +285,8 @@
 						  <div class="price">
 						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
-						   </div>						  
-						</div>	
+						   </div>
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 						      <div class="content-overlay"></div>
@@ -303,8 +303,8 @@
 						  <div class="price">
 						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
-						   </div>						  
-						</div>	
+						   </div>
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 						      <div class="content-overlay"></div>
@@ -321,8 +321,8 @@
 						  <div class="price">
 						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
-						   </div>						  
-						</div>	
+						   </div>
+						</div>
 						<div class="col-lg-3 col-md-6 single-product">
 						  <div class="content">
 						      <div class="content-overlay"></div>
@@ -339,13 +339,13 @@
 						  <div class="price">
 						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
-						   </div>						  
-						</div>																			
+						   </div>
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End women-product Area -->
-			
+
 			<!-- Start Count Down Area -->
 			<div class="countdown-area">
 				<div class="container">
@@ -399,7 +399,7 @@
 			</div>
 			<!-- End Count Down Area -->
 
-			<!-- Start related-product Area --> 
+			<!-- Start related-product Area -->
 			<section class="related-product-area section-gap" id="latest">
 				<div class="container">
 					<div class="related-content">
@@ -407,7 +407,7 @@
 							<h1 class="mb-10">Related Searched Products</h1>
 							<p>Who are in extremely love with eco friendly system.</p>
 						</div>
-					</div>					
+					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
@@ -416,8 +416,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r2.jpg" alt=""></a>
@@ -425,8 +425,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r3.jpg" alt=""></a>
@@ -434,8 +434,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r4.jpg" alt=""></a>
@@ -443,8 +443,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>	
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r5.jpg" alt=""></a>
@@ -452,8 +452,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r6.jpg" alt=""></a>
@@ -461,8 +461,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r7.jpg" alt=""></a>
@@ -470,8 +470,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r8.jpg" alt=""></a>
@@ -479,8 +479,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>	
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r9.jpg" alt=""></a>
@@ -488,8 +488,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r10.jpg" alt=""></a>
@@ -497,8 +497,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r11.jpg" alt=""></a>
@@ -506,8 +506,8 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>		
+							</div>
+						</div>
 						<div class="col-lg-3 col-md-4 col-sm-6">
 							<div class="single-related-product d-flex">
 								<a href="#"><img src="img/r12.jpg" alt=""></a>
@@ -515,12 +515,12 @@
 									<a href="#" class="title">Black lace Heels</a>
 									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
 								</div>
-							</div>							
-						</div>																		
+							</div>
+						</div>
 					</div>
 			</section>
 			<!-- End related-product Area -->
-	
+
 			<!-- Start brand Area -->
 			<section class="brand-area pb-100">
 				<div class="container">
@@ -540,12 +540,12 @@
 							<a class="col single-img" href="#">
 								<img class="d-block mx-auto" src="img/br5.png" alt="">
 							</a>
-					</div>	
-				</div>	
+					</div>
+				</div>
 			</section>
 			<!-- End brand Area -->
 
-			<!-- start footer Area -->		
+			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
 					<div class="row">
@@ -574,16 +574,16 @@
 				                            	<div style="position: absolute; left: -5000px;">
 													<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
 												</div>
-				                          	
+
 											<!-- <div class="col-lg-4 col-md-4">
 												<button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
 											</div>  -->
-										</div>		
+										</div>
 										<div class="info"></div>
 										</form>
 								</div>
 								</div>
-						</div>						
+						</div>
 						<div class="col-lg-3  col-md-6 col-sm-6">
 							<div class="single-footer-widget mail-chimp">
 								<h6 class="mb-20">Instagram</h6>
@@ -601,7 +601,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="single-footer-widget">
-								<h6>Siguenos</h6>								
+								<h6>Siguenos</h6>
 								<div class="footer-social d-flex align-items-center">
 									<a href="#"><i class="fa fa-facebook"></i></a>
 									<a href="#"><i class="fa fa-twitter"></i></a>
@@ -609,7 +609,7 @@
 									<a href="#"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
-						</div>							
+						</div>
 					</div>
 					<div class="footer-bottom d-flex justify-content-center align-items-center flex-wrap">
 
@@ -618,8 +618,8 @@
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</div>
 				</div>
-			</footer>	
-			<!-- End footer Area -->		
+			</footer>
+			<!-- End footer Area -->
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -629,8 +629,8 @@
 			<script src="js/jquery.sticky.js"></script>
 			<script src="js/ion.rangeSlider.js"></script>
 			<script src="js/jquery.magnific-popup.min.js"></script>
-            <script src="js/owl.carousel.min.js"></script>			
-			<script src="js/main.js"></script>	
-			
+            <script src="js/owl.carousel.min.js"></script>
+			<script src="js/main.js"></script>
+
 		</body>
 	</html>
