--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						  </button>
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
-								<li><a href="#home">ROPA DE VIEJAS</a></li>
+								<li><a href="#home">Ropa</a></li>
 								<li><a href="#catagory">Accesorios</a></li>
 								<li><a href="#men">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
@@ -66,7 +66,7 @@
 								        Pages
 								      </a>
 								      <div class="dropdown-menu">
-								        <a class="dropdown-item" href="category.html">Category</a>
+								        <a class="dropdown-item" href="category.html">Categoria</a>
 								        <a class="dropdown-item" href="single.html">Single</a>
 								        <a class="dropdown-item" href="cart.html">Cart</a>
 								        <a class="dropdown-item" href="checkout.html">Checkout</a>
@@ -97,7 +97,7 @@
 								It’s Happening <br>
 								this Season!
 							</h1>
-							<button class="primary-btn text-uppercase"><a href="#">Purchase Now</a></button>
+							<button class="primary-btn text-uppercase"><a href="#">Comprar Ahora</a></button>
 						</div>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-40">
 							<div class="title text-center">
-								<h1 class="mb-10">Shop for Different Categories</h1>
+								<h1 class="mb-10">Comprar para diferentes categorias</h1>
 								<p>Who are in extremely love with eco friendly system.</p>
 							</div>
 						</div>
@@ -146,7 +146,7 @@
 									      <div class="content-overlay"></div>
 									  		 <img class="content-image img-fluid d-block mx-auto" src="img/c3.jpg" alt="">
 									      <div class="content-details fadeIn-bottom">
-									        <h3 class="content-title">Shop Now</h3>
+									        <h3 class="content-title">Compra Ahora</h3>
 									      </div>
 									    </a>
 									</div>
