--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
 								<li><a href="#home">Ropa</a></li>
-								<li><a href="#catagory">Accesorios</a></li>
+								<li><a href="#category">Accesorios</a></li>
 								<li><a href="#men">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
 									<!-- Dropdown -->
