--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
 		<!-- Mobile Specific Meta -->
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Boutique</title>
+		<title>Shop</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -35,6 +35,11 @@
 					<div class="menu-top container">
 						<div class="d-flex justify-content-between align-items-center">
 							<ul class="list">
+								<li><a href="tel:+12312-3-1209">+12312-3-1209</a></li>
+								<li><a href="mailto:support@colorlib.com">support@colorlib.com</a></li>
+							</ul>
+							<ul class="list">
+								<li><a href="#">Login</a></li>
 								<li><a href="tel:6641239876">664-123-9876</a></li>
 								<li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>
 							</ul>
@@ -51,10 +56,27 @@
 						  </button>
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
-								<li><a href="ropa.html">Ropa</a></li>
-								<li><a href="#category">Accesorios</a></li>
+								<li><a href="#home">Ropa</a></li>
+								<li><a href="#catagory">Accesorios</a></li>
 								<li><a href="#men">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
+									<!-- Dropdown -->
+								    <li class="dropdown">
+								      <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+								        Pages
+								      </a>
+								      <div class="dropdown-menu">
+								        <a class="dropdown-item" href="category.html">Categoria</a>
+								        <a class="dropdown-item" href="single.html">Single</a>
+								        <a class="dropdown-item" href="cart.html">Cart</a>
+								        <a class="dropdown-item" href="checkout.html">Checkout</a>
+								        <a class="dropdown-item" href="confermation.html">Confermation</a>
+								        <a class="dropdown-item" href="login.html">Login</a>
+								        <a class="dropdown-item" href="tracking.html">Tracking</a>
+								        <a class="dropdown-item" href="generic.html">Generic</a>
+								        <a class="dropdown-item" href="elements.html">Elements</a>
+								      </div>
+								    </li>
 						    </ul>
 						  </div>
 					</div>
@@ -66,25 +88,184 @@
 			<section class="banner-area relative" id="home">
 				<div class="container-fluid">
 					<div class="row fullscreen align-items-center justify-content-center">
+						<div class="col-lg-6 col-md-12 d-flex align-self-end img-right no-padding">
+							<img class="img-fluid" src="img/header-img.png" alt="">
+						</div>
 						<div class="banner-content col-lg-6 col-md-12">
+							<h1 class="title-top"><span>Flat</span> 75%Off</h1>
 							<h1 class="text-uppercase">
-								Mira ahora lo que <br>
-								tenemos para ti!
+								It’s Happening <br>
+								this Season!
 							</h1>
-						<!--	<button class="primary-btn text-uppercase"><a href="carrusel.html">Ver</a></button> -->
-							<a href="carrusel.html" class="primary-btn text-uppercase">Ver</a>
+							<button class="primary-btn text-uppercase"><a href="#">Comprar Ahora</a></button>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->
 
+			<!-- Start category Area -->
+			<section class="category-area section-gap section-gap" id="catagory">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-40">
+							<div class="title text-center">
+								<h1 class="mb-10">Comprar para diferentes categorias</h1>
+								<p>Who are in extremely love with eco friendly system.</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-8 col-md-8 mb-10">
+							<div class="row category-bottom">
+								<div class="col-lg-6 col-md-6 mb-30">
+									<div class="content">
+									    <a href="#" target="_blank">
+									      <div class="content-overlay"></div>
+									  		 <img class="content-image img-fluid d-block mx-auto" src="img/c1.jpg" alt="">
+									      <div class="content-details fadeIn-bottom">
+									        <h3 class="content-title">Product for Women</h3>
+									      </div>
+									    </a>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 mb-30">
+									<div class="content">
+									    <a href="#" target="_blank">
+									      <div class="content-overlay"></div>
+									  		 <img class="content-image img-fluid d-block mx-auto" src="img/c2.jpg" alt="">
+									      <div class="content-details fadeIn-bottom">
+									        <h3 class="content-title">Product for Couple</h3>
+									      </div>
+									    </a>
+									</div>
+								</div>
+								<div class="col-lg-12">
+									<div class="content">
+										<a href="#" target="_blank">
+									      <div class="content-overlay"></div>
+									  		 <img class="content-image img-fluid d-block mx-auto" src="img/c3.jpg" alt="">
+									      <div class="content-details fadeIn-bottom">
+									        <h3 class="content-title">Compra Ahora</h3>
+									      </div>
+									    </a>
+									</div>
+							  	</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 mb-10">
+						  <div class="content">
+						    <a href="#" target="_blank">
+						      <div class="content-overlay"></div>
+						  		 <img class="content-image img-fluid d-block mx-auto" src="img/c4.jpg" alt="">
+						      <div class="content-details fadeIn-bottom">
+						        <h3 class="content-title">Product For Men</h3>
+						      </div>
+						    </a>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End category Area -->
+
+			<!-- Start men-product Area -->
+			<section class="men-product-area section-gap relative" id="men">
+				<div class="overlay overlay-bg"></div>
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-40">
+							<div class="title text-center">
+								<h1 class="text-white mb-10">Nuevos Articulos Para Dama</h1>
+								<p class="text-white">Who are in extremely love with eco friendly system.</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-6 single-product">
+						  <div class="content">
+						      <div class="content-overlay"></div>
+						  		 <img class="content-image img-fluid d-block mx-auto" src="Bolsas/B2.jpg" alt="">
+						      <div class="content-details fadeIn-bottom">
+							        <div class="bottom d-flex align-items-center justify-content-center">
+										<a href="#"><span class="lnr lnr-heart"></span></a>
+										<a href="#"><span class="lnr lnr-layers"></span></a>
+										<a href="#"><span class="lnr lnr-cart"></span></a>
+										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
+									</div>
+						      </div>
+						  </div>
+						  <div class="price">
+						  		<h5 class="text-white">Long Sleeve shirt</h5>
+						  		<h3 class="text-white">$150.00</h3>
+						   </div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-product">
+						  <div class="content">
+						      <div class="content-overlay"></div>
+						  		 <img class="content-image img-fluid d-block mx-auto" src="Bolsas/B1.jpg" alt="">
+						      <div class="content-details fadeIn-bottom">
+							        <div class="bottom d-flex align-items-center justify-content-center">
+										<a href="#"><span class="lnr lnr-heart"></span></a>
+										<a href="#"><span class="lnr lnr-layers"></span></a>
+										<a href="#"><span class="lnr lnr-cart"></span></a>
+										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
+									</div>
+						      </div>
+						  </div>
+						  <div class="price">
+						  		<h5 class="text-white">Long Sleeve shirt</h5>
+						  		<h3 class="text-white">$150.00</h3>
+						   </div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-product">
+						  <div class="content">
+						      <div class="content-overlay"></div>
+						  		 <img class="content-image img-fluid d-block mx-auto" src="img/l3.jpg" alt="">
+						      <div class="content-details fadeIn-bottom">
+							        <div class="bottom d-flex align-items-center justify-content-center">
+										<a href="#"><span class="lnr lnr-heart"></span></a>
+										<a href="#"><span class="lnr lnr-layers"></span></a>
+										<a href="#"><span class="lnr lnr-cart"></span></a>
+										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
+									</div>
+						      </div>
+						  </div>
+						  <div class="price">
+						  		<h5 class="text-white">Long Sleeve shirt</h5>
+						  		<h3 class="text-white">$150.00</h3>
+						   </div>
+						</div>
+						<div class="col-lg-3 col-md-6 single-product">
+						  <div class="content">
+					      	<div class="content-overlay"></div>
+					  		 <img class="content-image img-fluid d-block mx-auto" src="img/l4.jpg" alt="">
+						      <div class="content-details fadeIn-bottom">
+							        <div class="bottom d-flex align-items-center justify-content-center">
+										<a href="#"><span class="lnr lnr-heart"></span></a>
+										<a href="#"><span class="lnr lnr-layers"></span></a>
+										<a href="#"><span class="lnr lnr-cart"></span></a>
+										<a href="#" data-toggle="modal" data-target="#exampleModal"><span class="lnr lnr-frame-expand"></span></a>
+									</div>
+						      </div>
+						  </div>
+						    <div class="price">
+						  		<h5 class="text-white">Long Sleeve shirt</h5>
+						  		<h3 class="text-white">$150.00</h3>
+						    </div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End men-product Area -->
+
 			<!-- Start women-product Area -->
 			<section class="women-product-area section-gap" id="women">
 				<div class="container">
 					<div class="countdown-content pb-40">
 						<div class="title text-center">
-							<h1 class="mb-10">Nuevos Artículos Para Mujeres</h1>
+							<h1 class="mb-10">New realeased Products for Women</h1>
+							<p>Who are in extremely love with eco friendly system.</p>
 						</div>
 					</div>
 					<div class="row">
@@ -102,7 +283,7 @@
 						      </div>
 						  </div>
 						  <div class="price">
-						  		<h5>Blusa Manga Larga</h5>
+						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
 						   </div>
 						</div>
@@ -120,7 +301,7 @@
 						      </div>
 						  </div>
 						  <div class="price">
-						  		<h5>Blusa Manga Larga</h5>
+						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
 						   </div>
 						</div>
@@ -138,7 +319,7 @@
 						      </div>
 						  </div>
 						  <div class="price">
-						  		<h5>Blusa Manga Larga</h5>
+						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
 						   </div>
 						</div>
@@ -156,7 +337,7 @@
 						      </div>
 						  </div>
 						  <div class="price">
-						  		<h5>Blusa Manga Larga</h5>
+						  		<h5>Long Sleeve shirt</h5>
 						  		<h3>$150.00</h3>
 						   </div>
 						</div>
@@ -170,7 +351,8 @@
 				<div class="container">
 					<div class="countdown-content">
 						<div class="title text-center">
-							<h1 class="mb-10">Venta exclusiva termina en:</h1>
+							<h1 class="mb-10">Exclusive Hot Deal Ends in:</h1>
+							<p>Who are in extremely love with eco friendly system.</p>
 						</div>
 					</div>
 					<div class="row">
@@ -182,7 +364,7 @@
 
 									</div>
 
-									<div class="countdown-label" id="day-countdown">Días</div>
+									<div class="countdown-label" id="day-countdown">Days</div>
 								</div>
 
 								<div class="countdown-item">
@@ -190,7 +372,7 @@
 
 									</div>
 
-									<div class="countdown-label" id="hour-countdown">Horas</div>
+									<div class="countdown-label" id="hour-countdown">Hours</div>
 								</div>
 
 								<div class="countdown-item">
@@ -198,7 +380,7 @@
 
 									</div>
 
-									<div class="countdown-label" id="minute-countdown">Minutos</div>
+									<div class="countdown-label" id="minute-countdown">Minutes</div>
 								</div>
 
 								<div class="countdown-item">
@@ -206,9 +388,9 @@
 
 									</div>
 
-									<div class="countdown-label text" id="second-countdown">Segundos</div>
+									<div class="countdown-label text" id="second-countdown">Seconds</div>
 								</div>
-								<a href="#" class="view-btn primary-btn2"><span>Compra Ahora</span></a>
+								<a href="#" class="view-btn primary-btn2"><span>Shop Now</span></a>
 								<img src="img/cd.png" class="img-fluid cd-img" alt="">
 							</div>
 						</div>
@@ -216,6 +398,152 @@
 				</div>
 			</div>
 			<!-- End Count Down Area -->
+
+			<!-- Start related-product Area -->
+			<section class="related-product-area section-gap" id="latest">
+				<div class="container">
+					<div class="related-content">
+						<div class="title text-center">
+							<h1 class="mb-10">Related Searched Products</h1>
+							<p>Who are in extremely love with eco friendly system.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r1.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r2.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r3.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r4.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r5.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r6.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r7.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6 mb-20">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r8.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r9.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r10.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r11.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-4 col-sm-6">
+							<div class="single-related-product d-flex">
+								<a href="#"><img src="img/r12.jpg" alt=""></a>
+								<div class="desc">
+									<a href="#" class="title">Black lace Heels</a>
+									<div class="price"><span class="lnr lnr-tag"></span> $189.00</div>
+								</div>
+							</div>
+						</div>
+					</div>
+			</section>
+			<!-- End related-product Area -->
+
+			<!-- Start brand Area -->
+			<section class="brand-area pb-100">
+				<div class="container">
+					<div class="row logo-wrap">
+							<a class="col single-img" href="#">
+								<img class="d-block mx-auto" src="img/br1.png" alt="">
+							</a>
+							<a class="col single-img" href="#">
+								<img class="d-block mx-auto" src="img/br2.png" alt="">
+							</a>
+							<a class="col single-img" href="#">
+								<img class="d-block mx-auto" src="img/br3.png" alt="">
+							</a>
+							<a class="col single-img" href="#">
+								<img class="d-block mx-auto" src="img/br4.png" alt="">
+							</a>
+							<a class="col single-img" href="#">
+								<img class="d-block mx-auto" src="img/br5.png" alt="">
+							</a>
+					</div>
+				</div>
+			</section>
+			<!-- End brand Area -->
 
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
@@ -305,4 +633,4 @@
 			<script src="js/main.js"></script>
 
 		</body>
-</html>
+	</html>
