Actualizacion de bolsos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						    <ul class="navbar-nav">
 								<li><a href="#home">Ropa</a></li>
 								<li><a href="#catagory">Accesorios</a></li>
-								<li><a href="#men">Bolsas</a></li>
+								<li><a href="#">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
 									<!-- Dropdown -->
 								    <li class="dropdown">
