Enlaces restablecidos de la barra de navegación

--- a/Accesorios.html
+++ b/Accesorios.html
@@ -42,7 +42,6 @@
                     <ul class="list">
                         <li><a href="tel:6641239876">664-123-9876</a></li>
                         <li><a href="mailto:boutique@gmail.com">boutique@gmail.com</a></li>
-                        <h4> Boutique de moda en Tijuana Baja California</h4>
                     </ul>
                 </div>
             </div>
@@ -57,9 +56,9 @@
                   </button>
                   <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li><a href="#home">Ropa</a></li>
-                        <li><a href="#category">Accesorios</a></li>
-                        <li><a href="#men">Bolsas</a></li>
+                        <li><a href="ropa.html">Ropa</a></li>
+                        <li><a href="Accesorios.html">Accesorios</a></li>
+                        <li><a href="Bolsas.html">Bolsas</a></li>
                         <li><a href="#women">Maquillajes</a></li>
                     </ul>
                   </div>
