--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 						  <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
 						    <ul class="navbar-nav">
 								<li><a href="ropa.html">Ropa</a></li>
-								<li><a href="#category">Accesorios</a></li>
-								<li><a href="#men">Bolsas</a></li>
+								<li><a href="Accesorios.html">Accesorios</a></li>
+								<li><a href="Bolsas.html">Bolsas</a></li>
 								<li><a href="#women">Maquillajes</a></li>
 						    </ul>
 						  </div>
